picante/tests/ui/input_multiple_keys.rs
#[picante::input]
pub struct Text {
    #[key]
    pub key1: String,
    #[key]
    pub key2: String,
    pub value: String,
}

fn main() {}
